--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -4,9 +4,7 @@
 asyncio_mode = auto
 # Create a new event loop for each test function to ensure isolation
 asyncio_default_fixture_loop_scope = function
-# Configure warning filters to ignore specific warnings
+# Configure warning filters to ignore all warnings
 filterwarnings =
-    # Ignore deprecation warnings from dependencies
-    ignore::DeprecationWarning
-    # Ignore pytest's own deprecation warnings
-    ignore::pytest.PytestDeprecationWarning
+    # Disable all warnings
+    ignore
