--- a/frontend/package.json
+++ b/frontend/package.json
@@ -77,13 +77,16 @@
     "react-syntax-highlighter": "^15.5.0",
     "reactflow": "^11.11.4",
     "recharts": "2.15.0",
-    "rehype-katex": "^7.0.1",
+    "rehype-katex": "^6.0.3",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^3.0.1",
-    "remark-math": "^6.0.0",
+    "remark-math": "^5.1.1",
+    "remark-rehype": "^11.1.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.0",
+    "unist-util-visit": "^5.0.0",
     "uuid": "^11.1.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
